--- a/mp_map.ipynb
+++ b/mp_map.ipynb
@@ -605,7 +605,7 @@
     "\n",
     "html = template.render(party=unique_party, geojson=geojson)\n",
     "\n",
-    "with open('map.html', 'w') as f:\n",
+    "with open('index.html', 'w') as f:\n",
     "    f.write(html)\n",
     "\n",
     "\n"
